--- a/deviceextra/res/values/strings.xml
+++ b/deviceextra/res/values/strings.xml
@@ -15,8 +15,14 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="app_name">Find7 settings</string>
+    <string name="app_name">Find 7 settings</string>
 
     <string name="color_enhancement">Use color enhancement</string>
-    <string name="color_enhancement_summary">Make your Find7 stand out from the masses with a beautiful display.</string>
+    <string name="color_enhancement_summary">Make your Find7 stand out from the masses with a beautiful display</string>
+
+    <string name="information">Information</string>
+    <string name="device">Device</string>
+    <string name="storage_layout">Storage layout</string>
+    <string name="pcb_version">PCB version</string>
+    <string name="rf_version">RF version</string>
 </resources>
