deviceextra: display panel type
  * extract panel type from cmdline and set it as property ro.oppo.panel

Change-Id: Ia26a2281e2af92515a8438b8ffc00889e667c40e
Signed-off-by: Alexander Martinz <eviscerationls@gmail.com>

--- a/deviceextra/res/values-de/strings.xml
+++ b/deviceextra/res/values-de/strings.xml
@@ -22,6 +22,7 @@
   <string name="information">Informationen</string>
   <string name="device">Modell</string>
   <string name="storage_layout">Speicherlayout</string>
+  <string name="panel_type">Panel-Typ</string>
   <string name="pcb_version">PCB-Version</string>
   <string name="rf_version">RF-Version</string>
 </resources>
