--- a/deviceextra/res/values/strings.xml
+++ b/deviceextra/res/values/strings.xml
@@ -23,6 +23,7 @@
     <string name="information">Information</string>
     <string name="device">Device</string>
     <string name="storage_layout">Storage layout</string>
+    <string name="panel_type">Panel type</string>
     <string name="pcb_version">PCB version</string>
     <string name="rf_version">RF version</string>
 </resources>
