--- a/deviceextra/res/values/strings.xml
+++ b/deviceextra/res/values/strings.xml
@@ -20,6 +20,9 @@
     <string name="color_enhancement">Use color enhancement</string>
     <string name="color_enhancement_summary">Make your Find7 stand out from the masses with a beautiful display</string>
 
+    <string name="reset_on_suspend">Reset on suspend</string>
+    <string name="reset_on_suspend_summary">Reset the input device when suspending to workaround degraded touch panel sensitivity</string>
+
     <string name="information">Information</string>
     <string name="device">Device</string>
     <string name="storage_layout">Storage layout</string>
